--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ header{
 .mainDiv {
     display: flex;
     height: 600px;
-    width: auto;
+    width: 600px;
     justify-content: space-around;
     justify-self: center;
     flex-wrap: wrap;
@@ -28,7 +28,8 @@ header{
 .mainDiv div{
     
     height: auto;
-    width: 40px;
-    height: 40px;
+    width: 10px;
+    /* height: 40px; */
     align-items: center;
+    flex: 1 1 0 ;
 }
