--- a/style.css
+++ b/style.css
@@ -2,33 +2,36 @@
 * {
   font-family: Atkinson Hyperlegible;
   box-sizing: content-box;
+  
 }
-header{
-    display: flex;
-    justify-content: center;
-    font-size: 40px;
-    padding: 30px;
-    color: rgb(rgba(204, 120, 25, 0.233));
+body{
+    background-color: mediumslateblue;
 }
-.div1{
-    display: flex;
-    justify-content: space-around;
-    
+header {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  padding: 30px;    
+}
+.div1 {
+  display: flex;
+  justify-content: space-around;
 }
 
 .mainDiv {
-    display: flex;
-    height: 600px;
-    width: auto;
-    justify-content: space-around;
-    justify-self: center;
-    flex-wrap: wrap;
+  display: flex;
+  width: 100%;
+  max-width: 600px;
+  justify-content: center;
+  align-items: center;
+  border: solid black 5px;
+  justify-self: center;
+  flex-wrap: wrap;
+  /* align-content: center; */
 }
 
 .mainDiv div{
-    
-    height: auto;
-    width: 40px;
-    height: 40px;
-    align-items: center;
+  border: solid black 1px;
+  width: 300px;
+  flex: auto;
 }
